--- a/our-world.css
+++ b/our-world.css
@@ -133,7 +133,7 @@ transform: rotateY(180deg);
 }.blueberry { margin: 0 auto; }
 .blueberry .slides {
     display: block;
-    position: relative;
+    position: absolute;
     overflow: hidden;
 }
 .blueberry .slides li {
@@ -145,7 +145,7 @@ transform: rotateY(180deg);
 .blueberry .slides li img {
     display: block;
     width: 100%;
-    max-width: 500px;
+    max-width: 520px;
 }
 .blueberry .slides li.active { display: block; position: absolute; text-align: center; height: 100%; max-height:480px; width:100%; max-width:520px;}
 .blueberry .crop li img { width: auto; }
