--- a/our-world.css
+++ b/our-world.css
@@ -144,10 +144,10 @@ transform: rotateY(180deg);
 }
 .blueberry .slides li img {
     display: block;
-    width: 100%;
-    max-width: 520px;
+    width: 480px;
+    height:480px;
 }
-.blueberry .slides li.active { display: block; position: absolute; text-align: center; height: 100%; max-height:480px; width:100%; max-width:520px;}
+.blueberry .slides li.active { display: block; position: absolute; width:480px; height:480px:}
 .blueberry .crop li img { width: auto; }
 
 .blueberry .pager {
