--- a/our-world.css
+++ b/our-world.css
@@ -143,12 +143,13 @@ transform: rotateY(180deg);
     position: absolute;
     top: 0;
     left: 0;
+    width:100%;
     overflow: hidden;
 }
 .blueberry .slides li img {
     display: block;
-    width: 380px;
-    height:380px;
+    width: 100%;
+    max-width:400px;
 }
 .blueberry .slides li.active { display: block; position: absolute;}
 .blueberry .crop li img { width: auto; }
