--- a/our-world.css
+++ b/our-world.css
@@ -23,7 +23,11 @@ height: 100px;
 transition: all 0.6s ease;
 transform-style: preserve-3d;
 }
-
+img{
+    width:100%;
+    max-width:380px;
+    
+    }
 .card1 {
 position: relative;
 color: #fff;
