--- a/our-world.css
+++ b/our-world.css
@@ -1,4 +1,13 @@
+#content{
+    max-width: 300px;
+    height:200px;
+    }
 
+.blueberry {
+    max-width: 300px;
+    height: 200px;
+    
+    }
 .slides{
     max-width:300px;
     height:200px;
