--- a/our-world.css
+++ b/our-world.css
@@ -1,3 +1,18 @@
+ul{
+    max-width:300px;
+    height: 200px;
+    
+    
+    
+    }
+
+li{
+    max-width:300px;
+    height:200px;
+    
+    
+    }
+
 #doc{
     max-width:300px;
     height: 200px;
