--- a/our-world.css
+++ b/our-world.css
@@ -1,7 +1,7 @@
 ul{
     max-width:300px;
     height: 200px;
-    
+    display:block;
     
     
     }
@@ -9,13 +9,14 @@ ul{
 li{
     max-width:300px;
     height:200px;
-    
+    display:block;
     
     }
 
 #doc{
     max-width:300px;
     height: 200px;
+    display:block;
     
     }
 
@@ -32,7 +33,8 @@ li{
 .slides{
     max-width:300px;
     height:200px;
-        
+        display:block;
+    text-align:center;
         
      }
 img{
